[project]
name = "copychat"
version = "0.1.0"
description = "Convert source code directories into markdown for LLM context"
authors = []
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyperclip>=1.8.2",
    "pathspec>=0.12.1",
    "tiktoken>=0.6.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
copychat = "copychat.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.0.0", "black>=24.2.0", "ruff>=0.2.1"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
